[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-vllm"
version = "0.1.0"
description = "A tiny vLLM implementation without CUDA dependency"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Renmin" },
]
dependencies = [
    "torch",
    "transformers",
    "accelerate",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["picovllm*"]
